--- a/Teste Textual/app/src/main/AndroidManifest.xml
+++ b/Teste Textual/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+
     <application
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
@@ -9,6 +11,9 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/Theme.TesteTextual1">
+        <activity
+                android:name=".ResultActivity"
+                android:exported="false"/>
         <activity
                 android:name=".MainActivity"
                 android:exported="true">
